--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
 body{
-    background-color: blue;
+    background-color:rgb(16, 172, 94);
+}
+
+.header{
+    border: 1px black solid;
+    margin: 0px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo{
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.header-links a{
+    text-decoration: none;
+    color: white;
+}
+
+.header-links{
+    border: 1px black solid;
+    display: flex;
+    gap: 40px;
 }
