--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
-body{
-    background-color:rgb(16, 172, 94);
-}
-
 a{
     text-decoration: none;
 }
 
+body{
+    padding: 0px;
+    margin: 0px;
+    background-color: rgb(0, 140, 255);
+}
+
 .top{
-    border: 1px solid black;
+    background-color:rgb(0, 140, 255);
 }
 
 .header{
@@ -36,7 +38,7 @@ a{
     border: 1px solid black;
     display: flex;
     justify-content: space-between;
-    margin: 200px 150px;
+    padding: 100px 150px;
 }
 
 .text{
@@ -62,4 +64,8 @@ button{
     border: none;
     padding: 8px 15px;
     border-radius: 10px;
+}
+
+.random{
+    background-color: rgb(88, 11, 59);
 }
