--- a/style.css
+++ b/style.css
@@ -67,5 +67,34 @@ button{
 }
 
 .random{
-    background-color: rgb(88, 11, 59);
+    background-color: rgb(231, 223, 194);
+    display: flex;
+    flex-direction: column;
+    padding: 80px 0px;
+}
+
+.random_title{
+    font-weight: 800;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+.subs{
+    display: flex;
+    flex-direction: row;
+    margin: 0px 200px;
+    gap: 5px;
+    justify-content: space-between;
+}
+
+.sub{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100px;
+    flex-shrink: 1;
+    flex-basis: auto;
+    gap: 10px;
 }
