--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ button{
     font-size: 40px;
     display: flex;
     justify-content: center;
-    padding: 20px;
+    padding-bottom: 80px;
 }
 
 .subs{
